# VideoDubbingLab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-cosyvoice3.txt  requirements.txt
app/: __init__.py  cli.py  config.py  logging_config.py  schemas.py
app/asr/: __init__.py  base.py  faster_whisper_backend.py  subtitle_align.py  whisperx_backend.py
app/audio/: __init__.py  align.py  concat.py  convert.py  dubbing_plan.py  duration.py  postprocess.py  silence.py
app/downloader/: __init__.py  utils.py  youtube.py
app/mux/: __init__.py  ffmpeg_muxer.py
app/pipeline/: local_pipeline.py  manifest.py  split_pipeline.py  stage_control.py  stages.py  youtube_pipeline.py
app/qc/: __init__.py  report.py
configs/: cosyvoice3_rl.yaml  deepseek.yaml  deepseek_v4_flash.yaml  default.yaml  qwen.yaml  tts_edge.yaml
docker/: Dockerfile  Dockerfile.cuda  docker-compose.yml
scripts/: check_env.py  download_cosyvoice3_rl.py  install_cosyvoice3_rl_deps.sh  install_ffmpeg_ubuntu.sh  run_cosyvoice3_rl_server.sh  run_demo.sh  setup_cosyvoice3_rl_ubuntu.sh
tests/: conftest.py  test_audio_align.py  test_audio_concat.py  test_cosyvoice3_config.py  test_deepseek_config.py  test_downloader.py  test_dubbing_plan.py  test_manifest.py  test_mock_translator.py  test_mock_tts.py  test_muxer.py  test_openai_translator_flow.py  test_qc_report.py  test_split_pipeline.py  test_subtitle_parser.py  test_subtitle_reflow.py  test_subtitle_writer.py  test_timecode.py  test_translator_duration.py  test_tts_cache.py
tts_servers/: cosyvoice3_http_server.py
(+21 files in other folders)
