[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-dubbing-lab"
version = "0.1.0"
description = "CLI pipeline for YouTube subtitle translation, Chinese TTS dubbing, audio alignment, and ffmpeg muxing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2024.1.1",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",
  "httpx>=0.25.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "srt>=3.5.0",
  "aiofiles>=23.0.0",
  "tenacity>=8.2.0",
  "soundfile>=0.12.1",
  "pydub>=0.25.1",
  "numpy>=1.24.0",
  "loguru>=0.7.0",
  "edge-tts>=6.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-p no:cacheprovider"
